--- a/README.Rmd
+++ b/README.Rmd
@@ -1,9 +1,20 @@
-
-
-# asremlPlus
+---
+title:  asremlPlus
+output: html_document
+---
+ 
+[![Project Status: Active:  The project has reached a stable, usable state and is being actively developed.](http://www.repostatus.org/badges/latest/active.svg)](http://www.repostatus.org/#active)
+[![minimal R version](https://img.shields.io/badge/R%3E%3D-2.10.0-6666ff.svg)](https://cran.r-project.org/)
+[![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/asremlPlus)](https://cran.r-project.org/package=asremlPlus)
+[![packageversion](https://img.shields.io/badge/Package%20version-4.0-21-orange.svg?style=flat-square)](commits/master)
+[![Last-changedate](https://img.shields.io/badge/last%20change-`r gsub('-', '--', Sys.Date())`-yellowgreen.svg)](/commits/master)
+[![Licence](https://img.shields.io/github/license/mashape/apistatus.svg)](http://choosealicense.com/licenses/mit/)
 [![Downloads](https://cranlogs.r-pkg.org/badges/last-week/asremlPlus)](commits/master)
-[![Licence](https://img.shields.io/badge/licence-BSD_3_clause +-lightgrey.svg)](http://choosealicense.com/)
-[![packageversion](https://img.shields.io/badge/Package%20version-search-green.svg?style=flat-square)](commits/master)
+```{r echo = FALSE}
+suppressMessages(suppressWarnings(badgecreatr::badgeplacer(status = "active", 
+                                                           githubaccount = "briencj",
+                                                           githubrepo = "asremlPlus")))
+```
 
 
 asremlPlus is an R package that augments the use of `ASReml-R` and `ASReml4-R` in fitting mixed models.
@@ -38,8 +49,6 @@ If you have not previously installed `asremlPlus` then you will need to install 
 
 `install.packages(c("dae", "ggplot2", "reshape", "plyr", "stringr", "RColorBrewer", `
 `                   "foreach", "parallel", "doParallel"))`
-
-<!--However, the version here may be somewhat newer than that on CRAN.-->
 
 ## What is does
 
