Add modified README.md

--- a/README.Rmd
+++ b/README.Rmd
@@ -1,6 +1,8 @@
 ---
 title:  asremlPlus
-output: html_document
+output: 
+  html_document:   
+    keep_md: TRUE
 ---
  
 [![Project Status: Active:  The project has reached a stable, usable state and is being actively developed.](http://www.repostatus.org/badges/latest/active.svg)](http://www.repostatus.org/#active)
