--- a/README.Rmd
+++ b/README.Rmd
@@ -5,11 +5,18 @@ output:
     keep_md: TRUE
 ---
  
+---
+ 
+[![packageversion](https://img.shields.io/badge/Package%20version-4.0-21-orange.svg?style=flat-square)](commits/master)
+ 
+---
+ 
+ 
 [![Project Status: Active:  The project has reached a stable, usable state and is being actively developed.](http://www.repostatus.org/badges/latest/active.svg)](http://www.repostatus.org/#active)
 [![minimal R version](https://img.shields.io/badge/R%3E%3D-2.10.0-6666ff.svg)](https://cran.r-project.org/)
 [![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/asremlPlus)](https://cran.r-project.org/package=asremlPlus)
-[![packageversion](https://img.shields.io/badge/Package%20version-4.0-21-orange.svg?style=flat-square)](commits/master)
-[![Last-changedate](https://img.shields.io/badge/last%20change-`r gsub('-', '--', Sys.Date())`-yellowgreen.svg)](/commits/master)
+[![GitHub package version](https://img.shields.io/github/package-asremlPlus/v/badges/shields.svg)](commits/master)
+`[![Last-changedate](https://img.shields.io/badge/last%20change-`r gsub('-', '--', Sys.Date())`-yellowgreen.svg)](/commits/master)
 [![Licence](https://img.shields.io/github/license/mashape/apistatus.svg)](http://choosealicense.com/licenses/mit/)
 [![Downloads](https://cranlogs.r-pkg.org/badges/last-week/asremlPlus)](commits/master)
 ```{r echo = FALSE}
@@ -89,4 +96,4 @@ They provide a computationally efficient algorithm for fitting mixed models usin
 
 ## License
 
-The `asremlPlus` package is distributed under the [BSD-3-Clause licence](<https://opensource.org/licenses/BSD-3-Clause>) -- for details see [LICENSE.md](commits/master).
+The `asremlPlus` package is distributed under the [MIT licence](<https://opensource.org/licenses/MIT>) -- for details see [LICENSE.md](commits/master).
