--- a/README.Rmd
+++ b/README.Rmd
@@ -12,8 +12,6 @@ output:
 ---
  
  
-
- 
 [![Project Status: Active:  The project has reached a stable, usable state and is being actively developed.](http://www.repostatus.org/badges/latest/active.svg)](http://www.repostatus.org/#active)
 [![minimal R version](https://img.shields.io/badge/R%3E%3D-2.10.0-6666ff.svg)](https://cran.r-project.org/)
 [![CRAN_Status_Badge](http://www.r-pkg.org/badges/version/asremlPlus)](https://cran.r-project.org/package=asremlPlus)
@@ -55,7 +53,7 @@ Windows binaries and source tarballs of the latest version of `asremlPlus` are a
 
 Next, install `asremlPlus` from GitHub by entering:
 
-`devtools::install_github("briencj\asremlPlus")`.
+`devtools::install_github("briencj/asremlPlus")`.
 
 Version 2.0-12 of the package is available from CRAN so that you could first install it and its dependencies using:
 
