--- a/README.Rmd
+++ b/README.Rmd
@@ -29,7 +29,7 @@ Versions 4.x-xx of `asremlPlus` are a major revamp of the package and include su
 
 For more information install the package and run the R command `news(package = “asremlPlus”)` or consult the [manual](./vignettes/asremlPlus-manual.pdf). 
 
-An overview can be obtained using `?asremlPlus`. In particular, an example of its use is given towards the bottom of the help information and this is avalable as the [Wheat vignette](./vignettes/Wheat.pdf) that is accesssed using `vignette("Wheat", package = "asremlPlus")`. It that shows how to select the terms to be included in a mixed model. Two further vignettes show how to use `asremlPlus` for exploring and presenting predictions from a linear mixed model analysis in the context of a three-factor factorial experiment on ladybirds: one vignette [Ladybird asreml vignette](./vignettes/Ladybird.asreml.pdf) uses `asreml` to produce the predictions and is available via `vignette("Ladybird.asreml", package = "asremlPlus")`; the other vignette [Ladybird lm vignette](./vignettes/Ladybird.asreml.pdf) uses `lm` to produce the predictions and is available via `vignette("Ladybird.lm", package = "asremlPlus")`.
+An overview can be obtained using `?asremlPlus`. In particular, an example of its use is given towards the bottom of the help information and this is avalable as the [Wheat vignette](./vignettes/Wheat.pdf) that is accesssed using `vignette("Wheat", package = "asremlPlus")`. It that shows how to select the terms to be included in a mixed model for an experiment that involves spatial variation. Two further vignettes show how to use `asremlPlus` for exploring and presenting predictions from a linear mixed model analysis in the context of a three-factor factorial experiment on ladybirds: one vignette [Ladybird asreml vignette](./vignettes/Ladybird.asreml.pdf) uses `asreml` to produce the predictions and is available via `vignette("Ladybird.asreml", package = "asremlPlus")`; the other vignette [Ladybird lm vignette](./vignettes/Ladybird.asreml.pdf) uses `lm` to produce the predictions and is available via `vignette("Ladybird.lm", package = "asremlPlus")`.
 
 ## Installing the package
 
