--- a/README.Rmd
+++ b/README.Rmd
@@ -1,12 +1,4 @@
----
-title: "asremlPlus"
-output:
-  html_document:
-    keep_md: yes
-  pdf_document: default
-  word_document: default
----
-
+# asremlPlus
 
 ```{r, echo = FALSE}
 description <- read.dcf('DESCRIPTION')
