Minor revisions to manual

--- a/README.tex
+++ b/README.tex
@@ -69,8 +69,8 @@
 \href{http://www.repostatus.org/\#active}{\includegraphics{http://www.repostatus.org/badges/latest/active.svg}}
 \href{https://cran.r-project.org/}{\includegraphics{https://img.shields.io/badge/R\%3E\%3D-2.10.0-6666ff.svg}}
 \href{https://cran.r-project.org/package=asremlPlus}{\includegraphics{http://www.r-pkg.org/badges/version/asremlPlus}}
-\href{/commits/master}{\includegraphics{https://img.shields.io/badge/Package\%20version-4.2--11-orange.svg?style=flat-square}}
-\href{/commits/master}{\includegraphics{https://img.shields.io/badge/last\%20change-2020--02--08-yellowgreen.svg}}
+\href{/commits/master}{\includegraphics{https://img.shields.io/badge/Package\%20version-4.2--24-orange.svg?style=flat-square}}
+\href{/commits/master}{\includegraphics{https://img.shields.io/badge/last\%20change-2020--09--26-yellowgreen.svg}}
 \href{http://choosealicense.com/licenses/mit/}{\includegraphics{https://img.shields.io/github/license/mashape/apistatus.svg}}
 \href{commits/master}{\includegraphics{https://cranlogs.r-pkg.org/badges/last-week/asremlPlus}}
 
@@ -109,7 +109,7 @@ experiment on ladybirds: one vignette,
 \texttt{asreml} and \texttt{asremlPlus} to produce and present
 predictions; the other vignette,
 \href{./vignettes/Ladybird.asreml.pdf}{Ladybird.lm vignette}, uses
-\texttt{lm} to produce the predictions and and \texttt{asremlPlus} to
+\texttt{lm} to produce the predictions and \texttt{asremlPlus} to
 present the predictions. The vignettes can be accessed via
 \texttt{vignette(name,\ package\ =\ "asremlPlus")}, where \texttt{name}
 is one of \texttt{"Wheat.analysis"}, \texttt{"Wheat.infoCriteria"},
@@ -172,18 +172,15 @@ general rule functions that are methods for \texttt{asreml} and
 functions that are methods for \texttt{alldiffs} and \texttt{data.frame}
 objects do not require \texttt{asreml-R}.
 
-The use of the package is exemplified in three vignettes: the
-\href{./vignettes/Wheat.pdf}{Wheat vignette} that is accesssed using
-\texttt{vignette("Wheat",\ package\ =\ "asremlPlus")}, shows how to
-select the terms to be included in a mixed model; two further vignettes
-show how to use \texttt{asremlPlus} for exploring and presenting
-predictions: one vignette
-\href{./vignettes/Ladybird.asreml.pdf}{Ladybird asreml vignette} uses
-\texttt{asreml} to produce the predictions and is available via
-\texttt{vignette("Ladybird.asreml",\ package\ =\ "asremlPlus")}; the
-other vignette \href{./vignettes/Ladybird.asreml.pdf}{Ladybird lm
-vignette} uses \texttt{lm} to produce the predictions and is available
-via \texttt{vignette("Ladybird.lm",\ package\ =\ "asremlPlus")}.
+The use of the package is exemplified in four vignettes:
+\href{./vignettes/Wheat.analysis.pdf}{Wheat.analysis vignette},
+\href{./vignettes/Wheat.infoCriteria.pdf}{Wheat.infoCriteria vignette},
+\href{./vignettes/Ladybird.asreml.pdf}{Ladybird asreml vignette} and
+\href{./vignettes/Ladybird.asreml.pdf}{Ladybird lm vignette}. They can
+be accessed via \texttt{vignette(name,\ package\ =\ "asremlPlus")},
+where \texttt{name} is one of \texttt{"Wheat.analysis"},
+\texttt{"Wheat.infoCriteria"}, \texttt{"Ladybird.asreml"} or
+\texttt{"Ladybird.lm"}.
 
 The content falls into the following natural groupings:
 
