Add SpatialModelOnIC functions

--- a/README.Rmd
+++ b/README.Rmd
@@ -1,4 +1,10 @@
-# asremlPlus
+---
+title: asremlPlus
+output:
+  html_document:
+    keep_md: yes
+  pdf_document: default
+---
 
 ```{r, echo = FALSE}
 description <- read.dcf('DESCRIPTION')
